reduced width of each project container to be 40% when max-width is 991px - this will allow 2 projects to appear per line, width is increased to 55% at max width 767 and display amended to inline-table so 1 project appears per line, aligned in the center / added border bottom to separate each project on mobile view (max width 767px) / adding margin to left and right of project buttons (live site & github btns) so they are spaced out and not stuck together / reduced max-width of the image for each project to 300px so it does not stretch the page on smaller screen sizes and still looks appropriate on desktop view / centered the projects header and adding some padding to top and bottom so it stands out and is not cramped / reduced landing(home) page image to 20vh at max width 575 so it did not stretch the page / removed padding from my name, title, and technical skills section on landing (home) page on max-wodth 767 - this done so everything is more central / changed height and width of each page to be 100% instead of 100vh & 100vw to avoid overlapping items in pages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,8 @@ body {
 }
 
 #home, #projects, #contact {
-    height: 100vh;
+    height: 100%;
+    width: 100%;
 }
 
 /* Navbar styling */
@@ -78,12 +79,24 @@ body {
     padding-left: 2rem;
 }
 
+ @media (max-width: 767.98px) { 
+    .my-name, .my-title, .technical-skills {
+        padding: 0;
+    }
+}
+
 .technical-skills > strong {
     color: var(--gold-color);
 }
 
 .home-page-img {
     height: 40vh;
+}
+
+@media (max-width: 575.98px) { 
+    .home-page-img {
+       height: 20vh;
+    }
 }
 
 
@@ -112,6 +125,11 @@ body {
     background: #fff;
 }
 
+#projects > h3 {
+    text-align: center;
+    padding: 2rem 0;
+}
+
 .projects-flex-container {
     display: flex;
     flex-wrap: wrap;
@@ -124,8 +142,25 @@ body {
     padding-bottom: 5rem;
 }
 
+@media (max-width: 991.98px) { 
+    .projects-flex-container > * {
+        width: 40%;
+    }
+ }
+
+ @media (max-width: 767.98px) { 
+    .projects-flex-container > * {
+        width: 55%;
+        margin: auto;
+        display: inline-table;
+        border-bottom: 1px solid var(--dark-blue-color);
+    }
+  }
+
+
+
 .project-pg-image {
-    max-width: 400px;
+    max-width: 300px;
 }
 
 .btn-small {
@@ -135,6 +170,11 @@ body {
 
 .btn-small:hover {
     background-color: var(--gold-color)!important;
-    color: var(--dark-blue-color)!important;
-   
+    color: var(--dark-blue-color)!important;   
+}
+
+ @media (max-width: 767.98px) { 
+    .btn-small {
+        margin:0 5px;
+    }
 }
